<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_info_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTMDBPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imgbtn_info_back"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/back_button"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_info_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgbtn_info_back"
                android:padding="24dp"
                android:text="@string/project_movie"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abl_info_appbar"
        android:padding="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_info_marcellinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/application_creator"
            android:src="@drawable/marcellinus" />

        <TextView
            android:id="@+id/tv_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_info_marcellinus"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:text="@string/marcellinus_gergie_mulya"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_info_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_info_name"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="@string/nim"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_info_poweredby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/img_info_tmdb"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/powered_by"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_info_tmdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/tmdb_logo"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="4dp"
            android:src="@drawable/ic_tmdb_alt_long" />
    </RelativeLayout>
</RelativeLayout>