<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_rectangle"
    android:backgroundTint="@color/colorTMDBPrimary"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_nic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_nic_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nic_title"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/no_internet_connection_message"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_nic_instruction"
        android:layout_marginTop="8dp"
        android:background="@color/colorLightGrey"
        android:contentDescription="@string/divider_line" />

    <Button
        android:id="@+id/btn_nic_tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nic_instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorTransparent"
        android:drawableLeft="@drawable/ic_loop"
        android:drawableTint="@color/colorTMDBSecondary"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/colorTMDBSecondary"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>