<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTMDBPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_main_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/imgbtn_main_info"
                android:padding="24dp"
                android:text="@string/project_movie"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgbtn_main_info"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/application_information"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_info"
                android:tint="@color/colorWhite" />
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_main_tabmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/abl_main_appbar"
            android:background="@color/colorTMDBPrimary"
            app:tabGravity="fill"
            app:tabIconTint="@color/tl_menu_selector"
            app:tabIndicatorColor="@color/colorTMDBSecondary"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movies"
                android:icon="@drawable/ic_movie" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorites"
                android:icon="@drawable/ic_star" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abl_main_appbar" />
</RelativeLayout>