<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MovieFragment">

    <ProgressBar
        android:id="@+id/pb_movies_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorTMDBSecondary"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorLightGrey"
                android:padding="8dp">

                <EditText
                    android:id="@+id/et_movies_search"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_rectangle"
                    android:backgroundTint="@color/colorLightGrey"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:hint="@string/search_for_a_movie"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/popular_right_now"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/upcoming"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movies_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/now_playing"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/feature_coming_soon" />
<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/rv_movies_nowplaying"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="8dp"-->
<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--                tools:listitem="@layout/item_movie" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/top_rated"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/feature_coming_soon" />
            <!--    <androidx.recyclerview.widget.RecyclerView-->
            <!--        android:id="@+id/rv_movies_toprated"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:orientation="horizontal"-->
            <!--        android:padding="8dp"-->
            <!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
            <!--        tools:listitem="@layout/item_movie" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>