<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_search_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTMDBPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imgbtn_search_back"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/back_button"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/colorWhite" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/imgbtn_search_back"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorLightGrey"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/search_for_a_movie"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                app:queryHint="@string/search_for_a_movie" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/pb_search_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/abl_search_appbar"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorTMDBSecondary"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_search_noresultfound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abl_search_appbar"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_result_found"
        android:textSize="20sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abl_search_appbar"
        android:orientation="vertical"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_movie" />
</RelativeLayout>